<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.bspb.smartbirds.pro.ui.fragment.CurrentMonitoringCommonFormFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/form_horizontal_spacing"
            android:paddingTop="@dimen/form_vertical_spacing"
            android:paddingRight="@dimen/form_horizontal_spacing"
            android:paddingBottom="@dimen/form_vertical_spacing">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <fragment
                    android:id="@+id/moderator_review_fragment"
                    android:name="org.bspb.smartbirds.pro.ui.fragment.ModeratorReviewFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:layout="@layout/fragment_moderator_review" />


                <org.bspb.smartbirds.pro.ui.views.SwitchFormInput
                    android:id="@+id/form_cbm_confidential"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:tag="@string/tag_confidential"
                    android:text="@string/monitoring_birds_private" />

            </LinearLayout>

            <View style="@style/FieldSeparator" />

            <org.bspb.smartbirds.pro.ui.views.CbmQuickChoiceFormInput
                android:id="@+id/form_cbm_species_quick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:entriesType="species_birds"
                app:hint="@string/monitoring_cbm_name" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.bspb.smartbirds.pro.ui.views.SingleChoiceFormInput
                    android:id="@+id/form_cbm_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/monitoring_cbm_name"
                    android:tag="@string/tag_observed_bird"
                    app:entriesType="species_birds"
                    app:required="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <View style="@style/FieldSeparator" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.bspb.smartbirds.pro.ui.views.SingleChoiceRadioFormInput
                    android:id="@+id/form_cbm_distance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:tag="@string/tag_distance"
                    app:entriesType="form_cbm_distance"
                    app:hint="@string/monitoring_cbm_distance"
                    app:orientation="vertical"
                    app:required="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <View style="@style/FieldSeparator" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.bspb.smartbirds.pro.ui.views.DecimalNumberFormInput
                    android:id="@+id/form_cbm_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/monitoring_cbm_count"
                    android:tag="@string/tag_count_subject"
                    app:required="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <View style="@style/FieldSeparator" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.bspb.smartbirds.pro.ui.views.ZoneFormInput
                    android:id="@+id/form_cbm_zone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/monitoring_cbm_zone"
                    android:tag="@string/tag_zone"
                    app:required="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/error_cbm_too_far"
                style="@style/TextWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4sp"
                android:layout_marginRight="4sp"
                android:text="@string/error_cbm_zone_too_far"
                android:visibility="gone"
                tools:visibility="visible" />

            <View style="@style/FieldSeparator" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <org.bspb.smartbirds.pro.ui.views.MultipleChoiceFormInput
                    android:id="@+id/form_cbm_threats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/monitoring_common_threats"
                    android:tag="@string/tag_threats"
                    app:entriesType="form_main_threats" />
            </com.google.android.material.textfield.TextInputLayout>

            <View style="@style/FieldSeparator" />

            <fragment
                android:id="@+id/pictures_fragment"
                android:name="org.bspb.smartbirds.pro.ui.fragment.NewEntryPicturesFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/submit_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />
</LinearLayout>