...
    <string name="entry_type_mammal">"Mammals"</string>
    <string name="entry_type_humid">"Wetlands zones"</string>
    <string name="entry_type_invertebrates">"Invertebrates"</string>
    <string name="required_field">"Required field"</string>
    <string name="monitoring_notification_title">"Monitoring"</string>
    <string name="monitoring_notification_content">"Monitoring started"</string>
    <string name="menu_entry_save">"Save"</string>
    <string name="menu_entry_add_photo">"+ Photo"</string>
    <string name="menu_monitoring_finish">"Finish"</string>
    <string name="menu_monitoring_new_entry">"New entry"</string>
    <string name="menu_monitoring_new_specific_entry">"New %s entry"</string>
    <string name="menu_monitoring_common">"Common"</string>
    <string name="menu_monitoring_zoom_500">"500 m"</string>
    <string name="menu_monitoring_zoom_free">"Free"</string>
    <string name="menu_monitoring_zoom_1000">"1 km"</string>
    <string name="menu_monitoring_zoom_250">"250 m"</string>
...
