...
    <item
        android:id="@+id/action_finish"
        android:title="@string/menu_monitoring_finish"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_new_entry"
        android:enabled="false"
        android:title="@string/menu_monitoring_new_entry"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_common_form"
...
